# serializer version: 1
# name: test_error_arm_machine_envelope[novel compile-state]
  dict({
    'command': 'novel compile',
    'messages': list([
      '<redacted>',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_error_arm_machine_envelope[novel compile-usage]
  dict({
    'command': 'novel compile',
    'messages': list([
      '<redacted>',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_error_arm_machine_envelope[novel desloppify-state]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      '<redacted>',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_error_arm_machine_envelope[novel desloppify-usage]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      '<redacted>',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_error_arm_machine_envelope[novel done-state]
  dict({
    'command': 'novel done',
    'messages': list([
      '<redacted>',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_error_arm_machine_envelope[novel done-usage]
  dict({
    'command': 'novel done',
    'messages': list([
      '<redacted>',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_error_arm_machine_envelope[novel state-state]
  dict({
    'command': 'novel state',
    'messages': list([
      '<redacted>',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_error_arm_machine_envelope[novel state-usage]
  dict({
    'command': 'novel state',
    'messages': list([
      '<redacted>',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_error_arm_machine_envelope[novel wordcount-state]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      '<redacted>',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_error_arm_machine_envelope[novel wordcount-usage]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      '<redacted>',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel compile-chapter-planning]
  dict({
    'command': 'novel compile',
    'messages': list([
      'cannot compile: chapter manifest is absent or empty',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel compile-characters]
  dict({
    'command': 'novel compile',
    'messages': list([
      'cannot compile: chapter manifest is absent or empty',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel compile-conflict-analysis]
  dict({
    'command': 'novel compile',
    'messages': list([
      'cannot compile: chapter manifest is absent or empty',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel compile-done]
  dict({
    'command': 'novel compile',
    'messages': list([
      'working/manuscript/compiled.md matches the chapter drafts',
    ]),
    'ok': True,
    'result': dict({
      'chapters': 3,
      'checked': 'working/manuscript/compiled.md',
      'diverged': False,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel compile-drafting]
  dict({
    'command': 'novel compile',
    'messages': list([
      'working/manuscript/compiled.md diverges from the chapter drafts; regenerate it with novel-compile',
    ]),
    'ok': False,
    'result': dict({
      'chapters': 3,
      'checked': 'working/manuscript/compiled.md',
      'diverged': True,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel compile-final-pass]
  dict({
    'command': 'novel compile',
    'messages': list([
      'working/manuscript/compiled.md matches the chapter drafts',
    ]),
    'ok': True,
    'result': dict({
      'chapters': 3,
      'checked': 'working/manuscript/compiled.md',
      'diverged': False,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel compile-premise]
  dict({
    'command': 'novel compile',
    'messages': list([
      'cannot compile: chapter manifest is absent or empty',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel compile-reader-fit]
  dict({
    'command': 'novel compile',
    'messages': list([
      'cannot compile: chapter manifest is absent or empty',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel compile-setting]
  dict({
    'command': 'novel compile',
    'messages': list([
      'cannot compile: chapter manifest is absent or empty',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel compile-stc]
  dict({
    'command': 'novel compile',
    'messages': list([
      'cannot compile: chapter manifest is absent or empty',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel compile-treatment]
  dict({
    'command': 'novel compile',
    'messages': list([
      'cannot compile: chapter manifest is absent or empty',
    ]),
    'ok': False,
    'result': dict({
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel desloppify-chapter-planning]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'no slop detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'pack': 'offenders',
      'total_words': 0,
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel desloppify-characters]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'no slop detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'pack': 'offenders',
      'total_words': 0,
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel desloppify-conflict-analysis]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'no slop detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'pack': 'offenders',
      'total_words': 0,
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel desloppify-done]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'no slop detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'pack': 'offenders',
      'total_words': 68800,
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel desloppify-drafting]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'no slop detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'pack': 'offenders',
      'total_words': 68800,
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel desloppify-final-pass]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'no slop detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'pack': 'offenders',
      'total_words': 68800,
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel desloppify-premise]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'no slop detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'pack': 'offenders',
      'total_words': 0,
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel desloppify-reader-fit]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'no slop detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'pack': 'offenders',
      'total_words': 0,
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel desloppify-setting]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'no slop detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'pack': 'offenders',
      'total_words': 0,
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel desloppify-stc]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'no slop detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'pack': 'offenders',
      'total_words': 0,
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel desloppify-treatment]
  dict({
    'command': 'novel desloppify',
    'messages': list([
      'no slop detected',
    ]),
    'ok': True,
    'result': dict({
      'findings': list([
      ]),
      'pack': 'offenders',
      'total_words': 0,
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel done-chapter-planning]
  dict({
    'command': 'novel done',
    'messages': list([
      'phase_is_done is false',
      'final_pass_complete is false',
      'knitting_gates_passed is false',
      'compile_consistent is false (compiled.md missing)',
    ]),
    'ok': False,
    'result': dict({
      'all_chapters_flagged': True,
      'compile_consistent': False,
      'final_pass_complete': False,
      'knitting_gates_passed': False,
      'no_unresolved_blockers': True,
      'phase_is_done': False,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel done-characters]
  dict({
    'command': 'novel done',
    'messages': list([
      'phase_is_done is false',
      'final_pass_complete is false',
      'knitting_gates_passed is false',
      'compile_consistent is false (compiled.md missing)',
    ]),
    'ok': False,
    'result': dict({
      'all_chapters_flagged': True,
      'compile_consistent': False,
      'final_pass_complete': False,
      'knitting_gates_passed': False,
      'no_unresolved_blockers': True,
      'phase_is_done': False,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel done-conflict-analysis]
  dict({
    'command': 'novel done',
    'messages': list([
      'phase_is_done is false',
      'final_pass_complete is false',
      'knitting_gates_passed is false',
      'compile_consistent is false (compiled.md missing)',
    ]),
    'ok': False,
    'result': dict({
      'all_chapters_flagged': True,
      'compile_consistent': False,
      'final_pass_complete': False,
      'knitting_gates_passed': False,
      'no_unresolved_blockers': True,
      'phase_is_done': False,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel done-done]
  dict({
    'command': 'novel done',
    'messages': list([
      'knitting_gates_passed is false',
    ]),
    'ok': False,
    'result': dict({
      'all_chapters_flagged': True,
      'compile_consistent': True,
      'final_pass_complete': True,
      'knitting_gates_passed': False,
      'no_unresolved_blockers': True,
      'phase_is_done': True,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel done-drafting]
  dict({
    'command': 'novel done',
    'messages': list([
      'phase_is_done is false',
      'final_pass_complete is false',
      'all_chapters_flagged is false',
      'knitting_gates_passed is false',
      'compile_consistent is false (compiled.md missing)',
    ]),
    'ok': False,
    'result': dict({
      'all_chapters_flagged': False,
      'compile_consistent': False,
      'final_pass_complete': False,
      'knitting_gates_passed': False,
      'no_unresolved_blockers': True,
      'phase_is_done': False,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel done-final-pass]
  dict({
    'command': 'novel done',
    'messages': list([
      'phase_is_done is false',
      'final_pass_complete is false',
      'knitting_gates_passed is false',
    ]),
    'ok': False,
    'result': dict({
      'all_chapters_flagged': True,
      'compile_consistent': True,
      'final_pass_complete': False,
      'knitting_gates_passed': False,
      'no_unresolved_blockers': True,
      'phase_is_done': False,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel done-premise]
  dict({
    'command': 'novel done',
    'messages': list([
      'phase_is_done is false',
      'final_pass_complete is false',
      'knitting_gates_passed is false',
      'compile_consistent is false (compiled.md missing)',
    ]),
    'ok': False,
    'result': dict({
      'all_chapters_flagged': True,
      'compile_consistent': False,
      'final_pass_complete': False,
      'knitting_gates_passed': False,
      'no_unresolved_blockers': True,
      'phase_is_done': False,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel done-reader-fit]
  dict({
    'command': 'novel done',
    'messages': list([
      'phase_is_done is false',
      'final_pass_complete is false',
      'knitting_gates_passed is false',
      'compile_consistent is false (compiled.md missing)',
    ]),
    'ok': False,
    'result': dict({
      'all_chapters_flagged': True,
      'compile_consistent': False,
      'final_pass_complete': False,
      'knitting_gates_passed': False,
      'no_unresolved_blockers': True,
      'phase_is_done': False,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel done-setting]
  dict({
    'command': 'novel done',
    'messages': list([
      'phase_is_done is false',
      'final_pass_complete is false',
      'knitting_gates_passed is false',
      'compile_consistent is false (compiled.md missing)',
    ]),
    'ok': False,
    'result': dict({
      'all_chapters_flagged': True,
      'compile_consistent': False,
      'final_pass_complete': False,
      'knitting_gates_passed': False,
      'no_unresolved_blockers': True,
      'phase_is_done': False,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel done-stc]
  dict({
    'command': 'novel done',
    'messages': list([
      'phase_is_done is false',
      'final_pass_complete is false',
      'knitting_gates_passed is false',
      'compile_consistent is false (compiled.md missing)',
    ]),
    'ok': False,
    'result': dict({
      'all_chapters_flagged': True,
      'compile_consistent': False,
      'final_pass_complete': False,
      'knitting_gates_passed': False,
      'no_unresolved_blockers': True,
      'phase_is_done': False,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel done-treatment]
  dict({
    'command': 'novel done',
    'messages': list([
      'phase_is_done is false',
      'final_pass_complete is false',
      'knitting_gates_passed is false',
      'compile_consistent is false (compiled.md missing)',
    ]),
    'ok': False,
    'result': dict({
      'all_chapters_flagged': True,
      'compile_consistent': False,
      'final_pass_complete': False,
      'knitting_gates_passed': False,
      'no_unresolved_blockers': True,
      'phase_is_done': False,
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel state-chapter-planning]
  dict({
    'command': 'novel state',
    'messages': list([
      'state is coherent',
    ]),
    'ok': True,
    'result': dict({
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel state-characters]
  dict({
    'command': 'novel state',
    'messages': list([
      'state is coherent',
    ]),
    'ok': True,
    'result': dict({
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel state-conflict-analysis]
  dict({
    'command': 'novel state',
    'messages': list([
      'state is coherent',
    ]),
    'ok': True,
    'result': dict({
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel state-done]
  dict({
    'command': 'novel state',
    'messages': list([
      'state is coherent',
    ]),
    'ok': True,
    'result': dict({
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel state-drafting]
  dict({
    'command': 'novel state',
    'messages': list([
      'state is coherent',
    ]),
    'ok': True,
    'result': dict({
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel state-final-pass]
  dict({
    'command': 'novel state',
    'messages': list([
      'state is coherent',
    ]),
    'ok': True,
    'result': dict({
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel state-premise]
  dict({
    'command': 'novel state',
    'messages': list([
      'state is coherent',
    ]),
    'ok': True,
    'result': dict({
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel state-reader-fit]
  dict({
    'command': 'novel state',
    'messages': list([
      'state is coherent',
    ]),
    'ok': True,
    'result': dict({
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel state-setting]
  dict({
    'command': 'novel state',
    'messages': list([
      'state is coherent',
    ]),
    'ok': True,
    'result': dict({
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel state-stc]
  dict({
    'command': 'novel state',
    'messages': list([
      'state is coherent',
    ]),
    'ok': True,
    'result': dict({
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel state-treatment]
  dict({
    'command': 'novel state',
    'messages': list([
      'state is coherent',
    ]),
    'ok': True,
    'result': dict({
      'violations': list([
      ]),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel wordcount-chapter-planning]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      'drafted 0 of 80000 words (0.0% of target); next knitting gate at 30% (24000 words to go)',
    ]),
    'ok': True,
    'result': dict({
      'chapters': list([
      ]),
      'cumulative': dict({
        'current': 0,
        'gate_triggered_30': False,
        'gate_triggered_50': False,
        'gate_triggered_80': False,
        'next_gate_distance': 24000,
        'next_gate_threshold': 0.3,
        'percent_of_target': 0.0,
        'target': 80000,
      }),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel wordcount-characters]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      'drafted 0 of 80000 words (0.0% of target); next knitting gate at 30% (24000 words to go)',
    ]),
    'ok': True,
    'result': dict({
      'chapters': list([
      ]),
      'cumulative': dict({
        'current': 0,
        'gate_triggered_30': False,
        'gate_triggered_50': False,
        'gate_triggered_80': False,
        'next_gate_distance': 24000,
        'next_gate_threshold': 0.3,
        'percent_of_target': 0.0,
        'target': 80000,
      }),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel wordcount-conflict-analysis]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      'drafted 0 of 80000 words (0.0% of target); next knitting gate at 30% (24000 words to go)',
    ]),
    'ok': True,
    'result': dict({
      'chapters': list([
      ]),
      'cumulative': dict({
        'current': 0,
        'gate_triggered_30': False,
        'gate_triggered_50': False,
        'gate_triggered_80': False,
        'next_gate_distance': 24000,
        'next_gate_threshold': 0.3,
        'percent_of_target': 0.0,
        'target': 80000,
      }),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel wordcount-done]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      'drafted 68800 of 80000 words (86.0% of target); all knitting gates reached',
    ]),
    'ok': True,
    'result': dict({
      'chapters': list([
        dict({
          'delta_against_target': 0,
          'number': 1,
          'percent_of_chapter_target': 100.0,
          'target_words': 24000,
          'words': 24000,
        }),
        dict({
          'delta_against_target': 0,
          'number': 2,
          'percent_of_chapter_target': 100.0,
          'target_words': 24000,
          'words': 24000,
        }),
        dict({
          'delta_against_target': 0,
          'number': 3,
          'percent_of_chapter_target': 100.0,
          'target_words': 20800,
          'words': 20800,
        }),
      ]),
      'cumulative': dict({
        'current': 68800,
        'gate_triggered_30': True,
        'gate_triggered_50': True,
        'gate_triggered_80': True,
        'next_gate_distance': None,
        'next_gate_threshold': None,
        'percent_of_target': 86.0,
        'target': 80000,
      }),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel wordcount-drafting]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      'drafted 68800 of 80000 words (86.0% of target); all knitting gates reached',
    ]),
    'ok': True,
    'result': dict({
      'chapters': list([
        dict({
          'delta_against_target': 0,
          'number': 1,
          'percent_of_chapter_target': 100.0,
          'target_words': 24000,
          'words': 24000,
        }),
        dict({
          'delta_against_target': 0,
          'number': 2,
          'percent_of_chapter_target': 100.0,
          'target_words': 24000,
          'words': 24000,
        }),
        dict({
          'delta_against_target': 0,
          'number': 3,
          'percent_of_chapter_target': 100.0,
          'target_words': 20800,
          'words': 20800,
        }),
      ]),
      'cumulative': dict({
        'current': 68800,
        'gate_triggered_30': True,
        'gate_triggered_50': True,
        'gate_triggered_80': True,
        'next_gate_distance': None,
        'next_gate_threshold': None,
        'percent_of_target': 86.0,
        'target': 80000,
      }),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel wordcount-final-pass]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      'drafted 68800 of 80000 words (86.0% of target); all knitting gates reached',
    ]),
    'ok': True,
    'result': dict({
      'chapters': list([
        dict({
          'delta_against_target': 0,
          'number': 1,
          'percent_of_chapter_target': 100.0,
          'target_words': 24000,
          'words': 24000,
        }),
        dict({
          'delta_against_target': 0,
          'number': 2,
          'percent_of_chapter_target': 100.0,
          'target_words': 24000,
          'words': 24000,
        }),
        dict({
          'delta_against_target': 0,
          'number': 3,
          'percent_of_chapter_target': 100.0,
          'target_words': 20800,
          'words': 20800,
        }),
      ]),
      'cumulative': dict({
        'current': 68800,
        'gate_triggered_30': True,
        'gate_triggered_50': True,
        'gate_triggered_80': True,
        'next_gate_distance': None,
        'next_gate_threshold': None,
        'percent_of_target': 86.0,
        'target': 80000,
      }),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel wordcount-premise]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      'drafted 0 of 80000 words (0.0% of target); next knitting gate at 30% (24000 words to go)',
    ]),
    'ok': True,
    'result': dict({
      'chapters': list([
      ]),
      'cumulative': dict({
        'current': 0,
        'gate_triggered_30': False,
        'gate_triggered_50': False,
        'gate_triggered_80': False,
        'next_gate_distance': 24000,
        'next_gate_threshold': 0.3,
        'percent_of_target': 0.0,
        'target': 80000,
      }),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel wordcount-reader-fit]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      'drafted 0 of 80000 words (0.0% of target); next knitting gate at 30% (24000 words to go)',
    ]),
    'ok': True,
    'result': dict({
      'chapters': list([
      ]),
      'cumulative': dict({
        'current': 0,
        'gate_triggered_30': False,
        'gate_triggered_50': False,
        'gate_triggered_80': False,
        'next_gate_distance': 24000,
        'next_gate_threshold': 0.3,
        'percent_of_target': 0.0,
        'target': 80000,
      }),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel wordcount-setting]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      'drafted 0 of 80000 words (0.0% of target); next knitting gate at 30% (24000 words to go)',
    ]),
    'ok': True,
    'result': dict({
      'chapters': list([
      ]),
      'cumulative': dict({
        'current': 0,
        'gate_triggered_30': False,
        'gate_triggered_50': False,
        'gate_triggered_80': False,
        'next_gate_distance': 24000,
        'next_gate_threshold': 0.3,
        'percent_of_target': 0.0,
        'target': 80000,
      }),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel wordcount-stc]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      'drafted 0 of 80000 words (0.0% of target); next knitting gate at 30% (24000 words to go)',
    ]),
    'ok': True,
    'result': dict({
      'chapters': list([
      ]),
      'cumulative': dict({
        'current': 0,
        'gate_triggered_30': False,
        'gate_triggered_50': False,
        'gate_triggered_80': False,
        'next_gate_distance': 24000,
        'next_gate_threshold': 0.3,
        'percent_of_target': 0.0,
        'target': 80000,
      }),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
# name: test_machine_envelope_matrix[novel wordcount-treatment]
  dict({
    'command': 'novel wordcount',
    'messages': list([
      'drafted 0 of 80000 words (0.0% of target); next knitting gate at 30% (24000 words to go)',
    ]),
    'ok': True,
    'result': dict({
      'chapters': list([
      ]),
      'cumulative': dict({
        'current': 0,
        'gate_triggered_30': False,
        'gate_triggered_50': False,
        'gate_triggered_80': False,
        'next_gate_distance': 24000,
        'next_gate_threshold': 0.3,
        'percent_of_target': 0.0,
        'target': 80000,
      }),
    }),
    'schema_version': 1,
    'working_dir': 'working',
  })
# ---
